--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -197,6 +197,27 @@ nav {
 				font-size: 30px;
 			}
 
+			.panel .body .properties .archive-warning {
+				margin-top: 10px;
+				border: 1px solid var(--gray4);
+				background-color: var(--gray2);
+				border-radius: 5px;
+				max-width: 800px;
+				display: flex;
+				align-items: center;
+			}
+
+				.panel .body .properties .archive-warning img {
+					padding-left: 10px;
+					height: 17px;
+					width: 17px;
+				}
+
+				.panel .body .properties .archive-warning p {
+					color: var(--yellow1);
+					padding: 5px 10px;
+				}
+
 			.panel .body .properties .user-form {
 				flex-direction: column;
 				display: flex;
@@ -226,7 +247,6 @@ nav {
 
 					.panel .body .properties .user-form .btn-container .btn {
 						padding: 6px 10px;
-						margin-top: 5px;
 						font-size: 15px;
 						display: flex;
 					}
@@ -239,9 +259,10 @@ nav {
 					height: 20px;
 					max-width: 20px;
 					filter: var(--svg);
+					user-select: none;
 				}
 
-					.panel .body .properties .user-form img:hover {
+					.panel .body .properties .user-form .hover-img:hover {
 						filter: var(--svgHover);
 					}
 
@@ -527,7 +548,7 @@ nav {
 								color: var(--textMain);
 								font-size: 17px;
 								align-items: flex-start;
-								gap: 10px;
+								gap: 8px;
 								flex-wrap: wrap;
 							}
 
