--- a/WCSTrainer/wwwroot/css/universal.css
+++ b/WCSTrainer/wwwroot/css/universal.css
@@ -40,9 +40,8 @@ button {
 }
 
 .black-pill {
-	border: 2px solid var(--gray3);
-	border-radius: 20px;
-	padding: 2px 9px;
+	border: 1px solid var(--gray3);
+	padding: 2px 5px;
 	font-size: 13px;
 	background-color: var(--black);
 	user-select: none;
@@ -111,6 +110,9 @@ pre {
 	color: var(--textMain);
 }
 
+img {
+	user-select: none;
+}
 
 @media print {
 	body * {
