--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -42,35 +42,7 @@
 </div>
 
 <div class="details">
-   <div class="top">
-      <div id="info-container" class="info-container">
-         <p id="name" class="title"></p>
-
-         <div class="info">
-            <p class="one">Status</p>
-            <p id="status" class="two"></p>
-         </div>
-
-         <div class="info">
-            <p class="one">Trainer Groups:</p>
-         </div>
-         <div id="group-list" class="list">
-            <div class="item">Placeholder</div>
-         </div>
-
-         <div class="info">
-            <p class="one">Assigned Trainings:</p>
-         </div>
-         <div id="training-list" class="list">
-            <div class="item">Placeholder</div>
-         </div>
-
-         <div class="info">
-            <p class="one">Total Assigned Hours:</p>
-            <p id="total-hours" class="two"></p>
-         </div>
-      </div>
-   </div>
+@*    <component type="typeof(Person)" render-mode="WebAssemblyPrerendered" param-EmployeeId="" /> *@
 </div>
 
 <script src="~/js/people.js"></script>
