--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -202,7 +202,7 @@
          var isVerified = item.classList.contains("Verified");
          var isCompleted = item.classList.contains("Completed");
          var isActive = item.classList.contains("Active");
-         var isAwaiting = item.classList.contains("awaiting");
+         var isAwaiting = item.classList.contains("Awaiting");
 
          item.style.display = "none";
 
