--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -887,64 +887,30 @@ nav {
 		display: flex;
 		width: 30%;
 		gap: 10px;
+		border-collapse: collapse;
 	}
 
-		.people-component .people-container .btn {
-			align-self: flex-end;
-			padding: 2px;
-			width: 100%;
-			font-size: 17px;
-			border: 1px solid var(--gray4);
-		}
-
-		.people-component .people-container .list-container {
-			border-bottom: 1px solid var(--gray4);
-			scrollbar-width: none;
-			overflow-y: scroll;
+		.people-component .people-container .btns-container {
 			display: flex;
-			height: 100px;
 		}
 
-			.people-component .people-container .list-container .selected-list {
-				width: 100%;
-				height: 100%;
-			}
-
-				.people-component .people-container .list-container .selected-list ul {
-					display: flex;
-					height: 100%;
-					flex-direction: row;
-					gap: 5px;
-					align-items: flex-start;
-					justify-content: flex-start;
-					flex-wrap: wrap;
-				}
-
-					.people-component .people-container .list-container .selected-list ul li {
-					}
-
-				.people-component .people-container .list-container .selected-list .selection {
-				}
-
-		.people-component .people-container .tabs {
-			justify-content: space-around;
-			display: flex;
-			width: 100%;
-		}
-
-			.people-component .people-container .tabs .tab {
-				justify-content: center;
-				color: var(--textMain);
-				text-align: center;
-				padding: 5px 10px;
+			.people-component .people-container .btns-container .btns {
 				display: flex;
-				flex-grow: 1;
+				width: 100%;
+				border-collapse: collapse;
 			}
 
-			.people-component .people-container .tabs .open-tab {
-				border-bottom: 1px solid var(--gray4);
-				background-color: var(--gray3);
-			}
+				.people-component .people-container .btns-container .btns .btn {
+					padding: 5px;
+					flex-grow: 1;
+					background-color: var(--gray1);
+					border-bottom: 1px solid var(--gray4);
+				}
+
+					.people-component .people-container .btns-container .btns .btn.selected {
+						background-color: var(--gray3);
+						border-bottom: 1px solid var(--textSub2);
+					}
 
 		.people-component .people-container .search {
 			display: flex;
@@ -957,7 +923,6 @@ nav {
 			}
 
 		.people-component .people-container .item-container {
-			border-bottom: 1px solid var(--gray4);
 			flex-direction: column;
 			scrollbar-width: none;
 			overflow: scroll;
@@ -976,6 +941,7 @@ nav {
 			padding: 0 5px;
 			display: flex;
 			color: var(--textMain);
+			
 		}
 
 			.people-component .people-container .item .photo {
@@ -1062,8 +1028,19 @@ nav {
 		.people-component .details .top {
 			display: flex;
 			flex-direction: column;
-			flex-grow: 1;
+			flex-grow: 2;
+			border-bottom: 1px solid var(--gray4);
 		}
+
+			.people-component .details .top .btn-container {
+				display: flex;
+			}
+
+				.people-component .details .top .btn-container .btn {
+					font-size: 17px;
+					display: flex;
+					padding: 5px 10px;
+				}
 
 			.people-component .details .top .info-container {
 				display: none;
@@ -1091,19 +1068,40 @@ nav {
 						color: var(--textMain);
 					}
 
-				.people-component .details .top .info-container .list {
-					padding: 0 10px;
+		.people-component .details .bottom {
+			display: flex;
+			flex-direction: column;
+			flex-grow: 1;
+			gap: 10px;
+			justify-content: space-between;
+		}
+
+			.people-component .details .bottom .list-container {
+				display: flex;
+				flex-direction: column;
+				gap: 15px;
+				flex-grow: 1;
+			}
+
+				.people-component .details .bottom .list-container .list {
 					display: flex;
-					flex-direction: column;
+					background-color: var(--black);
+					flex-grow: 1;
+					padding: 10px;
+					border: 1px solid var(--gray3);
+					gap: 5px;
 				}
 
-					.people-component .details .top .info-container .list .item {
-						border-bottom: 1px solid var(--gray4);
-						margin-top: 5px;
-						font-size: 15px;
-						border-radius: 3px;
-						padding: 2px 5px;
+				.people-component .details .bottom .btn-container {
+					display: flex;
+				}
+
+					.people-component .details .bottom .btn-container .btn {
+						font-size: 17px;
+						display: flex;
+						padding: 5px 10px;
 					}
+
 
 
 .drop-main {
